- blocks
-
JDK-8341767 [lworld] JIT support for nullable, atomic, flat arrays
-
- Resolved
-
- causes
-
JDK-8371917 [lworld] C1 should use LayoutKind in its handling of flat layouts
-
- Open
-
-
JDK-8376059 [lworld] Aarch64: StoreLSpecial with 1 oop does not save register in pre-barrier
-
- Open
-
-
JDK-8353195 [lworld] Several failures with -XX:+UseNullableValueFlattening
-
- Resolved
-
-
JDK-8353202 [lworld] TestArrays.java crashes with -XX:+UseNullableValueFlattening
-
- Resolved
-
-
JDK-8353212 [lworld] TestFlatArrayAliasesCardMark.java crashes when run with -XX:+UseAtomicValueFlattening
-
- Resolved
-
-
JDK-8353432 [lworld] Deoptimization needs to handle nullable, flat fields in non-value class holders
-
- Resolved
-
-
JDK-8355299 [lworld] C2 compilation fails with "unexpected yanked node"
-
- Resolved
-
-
JDK-8364191 [lworld] Accesses to atomic flat fields prevent scalar replacement
-
- Resolved
-
-
JDK-8375526 [lworld] Missing newline in fieldDescriptor::print_on_for
-
- Resolved
-
- duplicates
-
JDK-8331500 [lworld] Implement null markers support in C2
-
- Closed
-
-
JDK-8341758 [lworld] C1 getfield/putfield for new flat fields on x64 and aarch64
-
- Closed
-
- is blocked by
-
JDK-8341757 Field layout computation allowing atomic and nullable flattening
-
- Resolved
-
-
JDK-8346702 [lworld] ShouldNotReachHere in FieldLayout::remove_null_marker()
-
- Resolved
-
- relates to
-
JDK-8353715 [lworld] TestArrays::test133 crashes with -XX:+UseNullableValueFlattening
-
- Closed
-
-
JDK-8350865 [lworld] Follow-up work from adding support for nullable, flat, atomic arrays / fields
-
- Open
-
-
JDK-8375714 [lworld] Flat access nodes should be pinned
-
- Closed
-
- links to
-
Commit(lworld)
openjdk/valhalla/aef1e5b7
-
Review(lworld)
openjdk/valhalla/1318