8341759: [lworld] JIT support for nullable, atomic, flat fields